# netatlas

./: .env.example  .gitignore  .prettierignore  .vercelignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/agent/: README.md  pyproject.toml
apps/agent/netatlas/: __init__.py  __main__.py  cli.py  discovery.py  models.py  oui.py  platform.py  reporter.py  scanner.py
apps/agent/tests/: __init__.py  test_cli.py  test_models.py  test_parsers.py  test_platform.py  test_version.py
apps/web/: .env.example  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(auth)/: actions.ts  layout.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(dashboard)/agents/: page.tsx
apps/web/app/(dashboard)/dashboard/: page.tsx
apps/web/components/agents/: agents-list.tsx  agents-page-client.tsx  register-agent-form.tsx  token-reveal.tsx
apps/web/components/auth/: auth-message.tsx  forgot-password-form.tsx  login-form.tsx  logout-button.tsx  register-form.tsx  reset-password-form.tsx
apps/web/components/dashboard/: dashboard-empty-state.tsx  dashboard-header.tsx
apps/web/components/layout/: profile-menu.tsx
apps/web/components/settings/: security-section.tsx
apps/web/components/theme/: theme-provider.tsx
apps/web/lib/agents/: utils.ts
apps/web/lib/supabase/: middleware.ts  server.ts
apps/web/lib/validations/: agents.ts  auth.ts
apps/web/types/: index.ts
supabase/: seed.sql
supabase/migrations/: .gitkeep
(+4 files in other folders)
