[project]
name = "netatlas-agent"
version = "0.1.0"
description = "Agente coletor NetAtlas — descoberta de rede via Nmap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
netatlas = "netatlas.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netatlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
